--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
     <title>Uber Vs. Lyft</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+      <div className="bg">
+        <div id="root"></div>
+      </div>
   </body>
 </html>
